# cdProjetoAplicadoIV

./: .gitignore  README.md  pyproject.toml
figuras/: diagrama-solucao.mermaid
projeto/: cd_projeto_aplicado_IV.ipynb  cd_projeto_aplicado_IV_entrega_1.ipynb  cd_projeto_aplicado_IV_entrega_2.ipynb  cd_projeto_aplicado_IV_entrega_3.ipynb  cd_projeto_aplicado_IV_entrega_4.ipynb
