[project]
name = "cdprojetoaplicadoiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "ruff>=0.15.4",
]
